[package]
name = "libtz-sys"
version = "0.2.2"
edition = "2021"
description = "An FFI interface to IANA's timezone library, libtz"
repository = "https://github.com/caldwell/libtz-sys.git"
license-file = "LICENSE.md"
links = "tz"

[lib]
path = "localtime.rs"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
version-sync = "0.9"

[dependencies]
